--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,12 @@
 			</div>
 		</div>
 		<div class="content">
-                {{ content }}
+			<ul class="breadcrumb">
+				<li><a href="/">Home</a></li>
+			</ul>
+
+			{{ content }}
+
 		</div>
 	</div>
 	<script>
