--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>SheerID Developer Center</title>
+	<title>SheerID Developer Center | {{ page.title }}</title>
 	<link rel="stylesheet" href="/common/deprecated/css/bootstrap.css" type="text/css"/>
 	<link rel="stylesheet" href="/common/deprecated/css/bootstrap-responsive.css" type="text/css"/>
 	<link rel="stylesheet" href="/common/sheerid/css/sheerid.css" type="text/css"/>
