--- a/common/sheerid/css/sheerid.css
+++ b/common/sheerid/css/sheerid.css
@@ -214,3 +214,11 @@ a.icon.info {
 	max-width: 100%;
 	max-height: 100%;
 }
+.deprecated-banner {
+	background-color: #fadcdc;
+	padding: 15px;
+	text-align: center;
+}
+.deprecated-banner-text {
+	font-size: 14px;
+}
